# SchplunkQuest

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  main.cpp
